# opensase-scheduling

./: .env.example  API_SPEC.yaml  ARCHITECTURE.md  COMPLIANCE.md  Cargo.toml  Dockerfile  PERFORMANCE.md  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
design/: FIGMA_MAKE_PROMPT.token
eventing/pulsar/: client-config.yaml  topics.yaml
migrations/: 001_initial.sql  001_initial_schema.sql
observability/quickwit/: index-config.yaml
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/aggregates/: mod.rs
src/domain/events/: mod.rs
src/domain/value_objects/: mod.rs
