[package]
name = "sase-scheduling"
version = "0.1.0"
edition = "2021"
authors = ["OpenSASE Team"]
description = "Self-hosted scheduling platform - Calendly replacement"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
dashmap = "5.5"
